--- a/homegenie-app/index.html
+++ b/homegenie-app/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-eval' blob:;" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/logo_homeginie.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>homegenie-app</title>
+  <title>HomeGenie</title>
 </head>
 
 <body>
